--- a/src/lab1_pkg/package.xml
+++ b/src/lab1_pkg/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>lab1_pkg</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>F1 tenth lab 1 package</description>
   <maintainer email="79773875+judson35@users.noreply.github.com">judson35</maintainer>
   <license>TODO: License declaration</license>
 
@@ -14,6 +14,7 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <!-- <build_type>ament_python</build_type> -->
   </export>
 
   <depend>ackermann_msgs</depend>
